# auto-subtitle

./: .gitignore  README.md  pyproject.toml
auto_subtitle/: cli.py  language_choices.py  logging_setup.py  main.py  utils.py
